cmake_minimum_required(VERSION 3.13)
project(cp)

set(CMAKE_CXX_STANDARD 14)

add_executable(merge merge.cpp)
add_executable(MyCircularDeque MyCircularDeque.cpp)
add_executable(trap trap.cpp)
add_executable(twoSum twoSum.cpp)
add_executable(longestCommonPrefix longestCommonPrefix.cpp)
add_executable(isPalindrome isPalindrome.cpp)
add_executable(gridIllumination gridIllumination.cpp)
add_executable(gridIllumination2 gridIllumination2.cpp)
